"save button and some changes"

--- a/web/home.html
+++ b/web/home.html
@@ -19,17 +19,24 @@
 <div id="container">
     <div id="editorContainer">
         <div id="editor" placeholder="Enter JavaScript code"></div>
-        <div id="buttonsContainer">
-            <button class="actionButton" id="excaute">run</button>
-            <button class="actionButton">Button 2</button>
-            <button class="actionButton" id="toggleButton">↓</button>
-        </div>
+        
     </div>
     <div id="iframeContainer">
         <iframe id="myIFrame" src="https://www.google.com/"></iframe>
     </div>
 </div>
-
+<div id="buttonsContainer">
+    <button id="excaute" class="snip1245">
+        Run
+        <i><img src="run.svg" width="80%" height="80%"></i>
+    </button>
+    <button id="save_comands" class="snip1245">
+        Download
+        <i><img src="download.svg" width="80%" height="80%"></i>
+    </button>
+    <button class="actionButton">Button 2</button>
+    <button class="actionButton" id="toggleButton">↓</button>
+</div>
 <div id="console"></div>
 
 <script src="home.js"></script>
