this lets go to programing python

--- a/web/home.html
+++ b/web/home.html
@@ -63,14 +63,18 @@
         one side
         <i><img src="arrow_down.svg" width="80%" height="80%"></i>
     </button>
-
+    <button id="clear_console" class="snip1245">
+        Clear Console
+        <i><img src="arrow_down.svg" width="80%" height="80%"></i>
+    </button>
 </div>
 
 <!-- Console Output Section -->
 <div id="console"></div>
 
 <script src="home.js"></script>
-
+<script src="buttons_actions.js"></script>
+<script src="console.js"></script>
 
 
 </body>
