clear button home.html

--- a/web/home.html
+++ b/web/home.html
@@ -65,7 +65,7 @@
     </button>
     <button id="clear_console" class="snip1245">
         Clear Console
-        <i><img src="arrow_down.svg" width="80%" height="80%"></i>
+        <i><img src="clear.svg" width="80%" height="80%"></i>
     </button>
 </div>
 
