SAVE ACTIONS AND BUTTON PYTHON

--- a/web/home.html
+++ b/web/home.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scraper</title>
+    
+    <script type="text/javascript" src="/eel.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style_header.css">
     <link rel="stylesheet" href="buttons.css">
@@ -69,12 +71,12 @@
     </button>
 </div>
 
-<!-- Console Output Section -->
-<div id="console"></div>
 
+<div id="console"></div>
 <script src="home.js"></script>
-<script src="buttons_actions.js"></script>
 <script src="console.js"></script>
+<script src="buttons_actions.js"></script>
+
 
 
 </body>
