--- a/web/home.html
+++ b/web/home.html
@@ -57,11 +57,11 @@
         Save
         <i><img src="download.svg" width="80%" height="80%"></i>
     </button>
-    <button id="upload_Command" class="snip1245">
+    <button id="upload_Command"  class="snip1245">
         Upload
-        <i><img src="upload.svg" width="80%" height="80%"></i>
+        <i><img src="upload.svg" type="file" width="80%" height="80%"></i>
     </button>
-    <button id="toggleButton" class="snip1245">
+    <button id="toggleButton"  class="snip1245">
         one side
         <i><img src="arrow_down.svg" width="80%" height="80%"></i>
     </button>
@@ -71,7 +71,7 @@
     </button>
 </div>
 
-
+<input type="file" id="just_click" hidden>
 <div id="console"></div>
 <script src="home.js"></script>
 <script src="console.js"></script>
