this before divde

--- a/web/home.html
+++ b/web/home.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scraper</title>
-    
+    <link rel="icon" type="image/x-icon" href="logo.png">
+
     <script type="text/javascript" src="/eel.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style_header.css">
