--- a/web/home.html
+++ b/web/home.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scraper</title>
-    <link rel="icon" type="image/x-icon" href="logo.png">
+    <link rel="icon" type="image/x-icon" href="img/logo.png">
 
     <script type="text/javascript" src="/eel.js"></script>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style_header.css">
-    <link rel="stylesheet" href="buttons.css">
-    <link rel="stylesheet" href="console.css">
-    <link rel="stylesheet" href="frame&code_editor.css">
-    <link rel="stylesheet" href="message.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_header.css">
+    <link rel="stylesheet" href="css/buttons.css">
+    <link rel="stylesheet" href="css/console.css">
+    <link rel="stylesheet" href="css/frame&code_editor.css">
+    <link rel="stylesheet" href="css/message.css">
     <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.31.1/min/vs/loader.js"></script>
 </head>
 <body>
@@ -29,7 +29,7 @@
     <div class="two">
     <button id="go" class="snip1245">
         Run
-        <i><img src="search.svg" width="80%" height="80%"></i>
+        <i><img src="img/search.svg" width="80%" height="80%"></i>
     </button>
     </div>
 </div>
@@ -52,31 +52,31 @@
 <div id="buttonsContainer">
     <button id="execute" class="snip1245">
         Run
-        <i><img src="run.svg" width="80%" height="80%"></i>
+        <i><img src="img/run.svg" width="80%" height="80%"></i>
     </button>
     <button id="save_Command" class="snip1245">
         Save
-        <i><img src="download.svg" width="80%" height="80%"></i>
+        <i><img src="img/download.svg" width="80%" height="80%"></i>
     </button>
     <button id="upload_Command"  class="snip1245">
         Upload
-        <i><img src="upload.svg" type="file" width="80%" height="80%"></i>
+        <i><img src="img/upload.svg" type="file" width="80%" height="80%"></i>
     </button>
     <button id="toggleButton"  class="snip1245">
         one side
-        <i><img src="arrow_down.svg" width="80%" height="80%"></i>
+        <i><img src="img/arrow_down.svg" width="80%" height="80%"></i>
     </button>
     <button id="clear_console" class="snip1245">
         Clear Console
-        <i><img src="clear.svg" width="80%" height="80%"></i>
+        <i><img src="img/clear.svg" width="80%" height="80%"></i>
     </button>
 </div>
 
 <input type="file" id="just_click" hidden>
 <div id="console"></div>
-<script src="home.js"></script>
-<script src="console.js"></script>
-<script src="buttons_actions.js"></script>
+<script src="Java_script/home.js"></script>
+<script src="Java_script/console.js"></script>
+<script src="Java_script/buttons_actions.js"></script>
 
 
 
